--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,10 @@ name = "pypi"
 django = "*"
 djangorestframework = "*"
 flake8 = "*"
+psycopg2 = "*"
+python-dotenv = "*"
+djangorestframework-simplejwt = "*"
+drf-yasg = "*"
 
 [dev-packages]
 
